Fix mobile nowrap

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -61,6 +61,7 @@ embed {
   @media (max-width: 624px) {
     display: block;
     margin-bottom: 0.5em;
+    white-space: normal;
   }
 
   &.red {
